# MyLastCamm

./: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/vlad/mylastcamm/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: android_main.cpp  camera_engine.cpp  camera_engine.h  camera_listeners.cpp  camera_manager.cpp  camera_manager.h  camera_ui.cpp  camera_utils.cpp  camera_utils.h  image_processing.cpp  image_processing.h  image_reader.cpp  image_reader.h  messages-internal.h  native-camera2-jni.cpp
app/src/main/java/com/example/vlad/mylastcamm/: Assert.java  CameraActivity.java  CameraSeekBar.java  MainActivity.kt  SpinnerAdapter.java  SpinnerItem.java
app/src/main/res/layout/: main.xml  style_spinner.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/vlad/mylastcamm/: ExampleUnitTest.kt
